--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "cub3d.h": "c",
         "iterator": "c"
-    }
+    },
+    "cmake.sourceDirectory": "/Users/mbouderr/Desktop/9lawi/MLX42"
 }
